# trillium-blog-example

./: Cargo.toml  README.md  database.uml  openapi.yaml
api/: Cargo.toml
api/src/: blogs.rs  db.rs  json_web_token.rs  lib.rs  users.rs
api/src/db/: blogs.rs  users.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: lib.rs
migrations/: 20211019142431_users.up.sql  20211019143415_post.up.sql  20211019143731_tags.up.sql  20211019144107_tags_posts.up.sql  20211020174330_blogs.up.sql  20211020174747_blog_authors.down.sql  20211020174747_blog_authors.up.sql  20211020175415_post.up.sql  20211020176107_tags_posts.down.sql
types/src/: blogs.rs  lib.rs  posts.rs  tags.rs  users.rs
