[package]
name = "trillium-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
djangohashers = "1.4"
dotenv = "0.15"
env_logger = "0.9"
hmac = "0.11"
jwt = "0.15"
lazy_static = "1.4"
log = "0.4"
sha2 = "0.9"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
trillium = "0.2"
trillium-api = "0.1"
trillium-logger = "0.4"
trillium-router = "0.3"
trillium-tokio = "0.2"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
types = { path = "../types" }

[dev-dependencies]
trillium-testing = { version = "0.3", features = ["tokio"] }
